# shamela_crawler

./: .gitignore  pyproject.toml  scrapy.cfg  sort_books_list.py
shamela_crawler/: __main__.py  items.py  middlewares.py  pipelines.py  settings.py
shamela_crawler/spiders/: shamela.py
