[tool.poetry]
name = "shamela_crawler"
version = "0.1.0"
description = "A web crawler to get https://shamela.ws/ books list"
authors = ["yshalsager <ysh-alsager@hotmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
